fix display on mobile

--- a/src/board/css/actions.css
+++ b/src/board/css/actions.css
@@ -31,8 +31,7 @@
 @media screen and (max-width: 450px) {
   .actions button {
     margin: 2vw;
-    height: 20vw;
-    padding: 5vw;
+    height: 15vw;
     font-size: 50%;
   }
 }
