--- a/src/board/css/sun.css
+++ b/src/board/css/sun.css
@@ -11,6 +11,7 @@
   box-shadow: 0px 0px 1vh 0.2vh rgba(0, 0, 0, 0.25);
   margin: 0.5vh;
   -webkit-user-select: none;
+  font-size: 80%;
 }
 
 .sun.selected {
@@ -34,5 +35,6 @@
     height: 8vw;
     border-width: 1.5vw;
     margin: 2vw;
+    font-size: 100%;
   }
 }
